# Endpoint/GetDocumentTypeClicksCountAnalytics.php
@@ -1,0 +1,35 @@
+<?php
+/**
+ * This file is part of the Swiftype PHP Client package.
+ *
+ * For the full copyright and license information, please view the LICENSE
+ * file that was distributed with this source code.
+ */
+
+namespace Swiftype\SiteSearch\Endpoint;
+
+/**
+ * Implementation of the  endpoint.
+ *
+ * @package Swiftype\SiteSearch\Endpoint
+ *
+ * @author  Aurélien FOUCRET <aurelien.foucret@elastic.co>
+ */
+class GetDocumentTypeClicksCountAnalytics extends \Swiftype\Endpoint\AbstractEndpoint
+{
+    // phpcs:disable
+    /**
+     * @var string
+     */
+    protected $method = 'POST';
+
+    /**
+     * @var string
+     */
+    protected $uri = '/engines/{engine_name}/document_types/{document_type_id}/analytics/clicks.json';
+
+    protected $routeParams = ['engine_name', 'document_type_id'];
+
+    protected $paramWhitelist = ['start_date', 'end_date'];
+    // phpcs:enable
+}
