# resources/api/api-spec.yml
@@ -770,12 +770,50 @@ paths:
         default:
           $ref: "#/components/responseBodies/jsonResponse"
 
+  /engines/{engine_name}/document_types/{document_type_id}/analytics/searches.json:
+    parameters:
+    - $ref: "#/components/parameters/engineNameParam"
+    - $ref: "#/components/parameters/documentTypeId"
+    post:
+      operationId: getDocumentTypeSearchCountAnalytics
+      summary: Get the number of searches per day for an document type.
+      externalDocs:
+        url: https://swiftype.com/documentation/site-search/analytics#searches
+      tags:
+      - Analytics API
+      parameters:
+      - $ref: "#/components/parameters/analyticsStartDate"
+      - $ref: "#/components/parameters/analyticsEndDate"
+      responses:
+        default:
+          $ref: "#/components/responseBodies/jsonResponse"
+
   /engines/{engine_name}/analytics/top_queries.json:
     parameters:
     - $ref: "#/components/parameters/engineNameParam"
     post:
       operationId: getEngineTopQueriesAnalytics
-      summary: Retrieve top queries and usage count over a period.
+      summary: Retrieve top queries and usage count over a period for an engine.
+      externalDocs:
+        url: https://swiftype.com/documentation/site-search/analytics#top_queries
+      tags:
+      - Analytics API
+      parameters:
+      - $ref: "#/components/parameters/analyticsStartDate"
+      - $ref: "#/components/parameters/analyticsEndDate"
+      - $ref: "#/components/parameters/currentPage"
+      - $ref: "#/components/parameters/pageSize"
+      responses:
+        default:
+          $ref: "#/components/responseBodies/jsonResponse"
+
+  /engines/{engine_name}/document_types/{document_type_id}/analytics/top_queries.json:
+    parameters:
+    - $ref: "#/components/parameters/engineNameParam"
+    - $ref: "#/components/parameters/documentTypeId"
+    post:
+      operationId: getDocumentTypeTopQueriesAnalytics
+      summary: Retrieve top queries and usage count over a period for a document type.
       externalDocs:
         url: https://swiftype.com/documentation/site-search/analytics#top_queries
       tags:
@@ -794,7 +832,27 @@ paths:
     - $ref: "#/components/parameters/engineNameParam"
     post:
       operationId: getEngineTopNoResultQueriesAnalytics
-      summary: Retrieve top queries with no result and usage count over a period.
+      summary: Retrieve top queries with no result and usage count over a period for an engine.
+      externalDocs:
+        url: https://swiftype.com/documentation/site-search/analytics#top_no_result_queries
+      tags:
+      - Analytics API
+      parameters:
+      - $ref: "#/components/parameters/analyticsStartDate"
+      - $ref: "#/components/parameters/analyticsEndDate"
+      - $ref: "#/components/parameters/currentPage"
+      - $ref: "#/components/parameters/pageSize"
+      responses:
+        default:
+          $ref: "#/components/responseBodies/jsonResponse"
+
+  /engines/{engine_name}/document_types/{document_type_id}/analytics/top_no_result_queries.json:
+    parameters:
+    - $ref: "#/components/parameters/engineNameParam"
+    - $ref: "#/components/parameters/documentTypeId"
+    post:
+      operationId: getDocumentTypeTopNoResultQueriesAnalytics
+      summary: Retrieve top queries with no result and usage count over a period for a document type.
       externalDocs:
         url: https://swiftype.com/documentation/site-search/analytics#top_no_result_queries
       tags:
@@ -813,7 +871,25 @@ paths:
     - $ref: "#/components/parameters/engineNameParam"
     post:
       operationId: getEngineClicksCountAnalytics
-      summary: Retrieve number of clicks per day over a period.
+      summary: Retrieve number of clicks per day over a period for an engine.
+      externalDocs:
+        url: https://swiftype.com/documentation/site-search/analytics#clicks
+      tags:
+      - Analytics API
+      parameters:
+      - $ref: "#/components/parameters/analyticsStartDate"
+      - $ref: "#/components/parameters/analyticsEndDate"
+      responses:
+        default:
+          $ref: "#/components/responseBodies/jsonResponse"
+
+  /engines/{engine_name}/document_types/{document_type_id}/analytics/clicks.json:
+    parameters:
+    - $ref: "#/components/parameters/engineNameParam"
+    - $ref: "#/components/parameters/documentTypeId"
+    post:
+      operationId: getDocumentTypeClicksCountAnalytics
+      summary: Retrieve number of clicks per day over a period for a document type.
       externalDocs:
         url: https://swiftype.com/documentation/site-search/analytics#clicks
       tags:
@@ -830,7 +906,25 @@ paths:
     - $ref: "#/components/parameters/engineNameParam"
     post:
       operationId: getEngineAutoselectsCountAnalytics
-      summary: Retrieve number of autoselects (number of clicked results in the autocomplete) per day over a period.
+      summary: Retrieve number of autoselects (number of clicked results in the autocomplete) per day over a period for an engine.
+      externalDocs:
+        url: https://swiftype.com/documentation/site-search/analytics#autoselects
+      tags:
+      - Analytics API
+      parameters:
+      - $ref: "#/components/parameters/analyticsStartDate"
+      - $ref: "#/components/parameters/analyticsEndDate"
+      responses:
+        default:
+          $ref: "#/components/responseBodies/jsonResponse"
+
+  /engines/{engine_name}/document_types/{document_type_id}/analytics/autoselects.json:
+    parameters:
+    - $ref: "#/components/parameters/engineNameParam"
+    - $ref: "#/components/parameters/documentTypeId"
+    post:
+      operationId: getDocumentTypeAutoselectsCountAnalytics
+      summary: Retrieve number of autoselects (number of clicked results in the autocomplete) per day over a period for a document type.
       externalDocs:
         url: https://swiftype.com/documentation/site-search/analytics#autoselects
       tags:
